Update build task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,18 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'Build'
 - task: DotNetCoreCLI@2
+  displayName: 'Build'
+  inputs:
+    command: 'build'
+    projects: '**/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
+#- script: dotnet build --configuration $(buildConfiguration)
+#  displayName: 'Build'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Run tests'
   inputs:
     command: 'test'
     projects: '**/*test*.csproj'
-  displayName: 'Run tests'
