Update Azure Pipelines 'Run tests' task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,5 @@ steps:
   displayName: 'Run tests'
   inputs:
     command: 'test'
-    projects: '**/*test*.csproj'
+    projects: '**/*Tests.csproj'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
