--- a/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
+++ b/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Azure.ResourceManager.Deployments.Expression" Version="1.0.109" />
+    <PackageReference Include="Azure.ResourceManager.Deployments.Templates" Version="1.0.109" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Armory.Utilities\Armory.Utilities.csproj" />
+  </ItemGroup>
 
 </Project>
