Add Component Governance to build pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,10 @@ steps:
     command: 'test'
     projects: '**/*Tests.csproj'
     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+
+- task: ComponentGovernanceComponentDetection@0
+  inputs:
+    scanType: 'Register'
+    verbosity: 'Verbose'
+    alertWarningLevel: 'High'
+    failOnAlert: true
