Change published package being used for parsing ARM templates

--- a/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
+++ b/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Deployments.Expression" Version="1.0.109" />
-    <PackageReference Include="Azure.ResourceManager.Deployments.Templates" Version="1.0.109" />
+    <PackageReference Include="Azure.Deployments.Core" Version="1.0.112" />
+    <PackageReference Include="Azure.Deployments.Expression" Version="1.0.112" />
+    <PackageReference Include="Azure.Deployments.Templates" Version="1.0.112" />
   </ItemGroup>
 
   <ItemGroup>
