--- a/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
+++ b/src/Armory.TemplateProcessor/Armory.TemplateProcessor.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>bin\Armory.TemplateProcessor.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Azure.Deployments.Core" Version="1.0.112" />
     <PackageReference Include="Azure.Deployments.Expression" Version="1.0.112" />
