--- a/src/Armory.Core.UnitTests/Armory.Core.UnitTests.csproj
+++ b/src/Armory.Core.UnitTests/Armory.Core.UnitTests.csproj
@@ -8,15 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Armory.JsonRuleEngine\Armory.JsonRuleEngine.csproj" />
-    <ProjectReference Include="..\Armory.TemplateProcessor\Armory.TemplateProcessor.csproj" />
+    <ProjectReference Include="..\Armory.Core\Armory.Core.csproj" />
   </ItemGroup>
 
 </Project>
