add command line parsing code
command line parsing code based on System.CommandLine

--- a/src/Armory.Cli/Armory.Cli.csproj
+++ b/src/Armory.Cli/Armory.Cli.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Armory.Core\Armory.Core.csproj" />
+  </ItemGroup>
+
 </Project>
