Rename rule directory

--- a/src/Armory.Core/Armory.Core.csproj
+++ b/src/Armory.Core/Armory.Core.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Armory.Rules\BuiltInRules.json">
+    <None Update="Rules\BuiltInRules.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
