--- a/src/Armory.Cli/Properties/launchSettings.json
+++ b/src/Armory.Cli/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Armory.Cli": {
-      "commandName": "Project",
-      "commandLineArgs": "assess-template -t C:\\Users\\varunsh.REDMOND\\Downloads\\Debug\\deploymentTemplate.json -p C:\\Users\\varunsh.REDMOND\\Downloads\\Debug\\deploymentParameters.json"
+      "commandName": "Project"
     }
   }
 }
