--- a/src/Analyzer.JsonRuleEngine/Analyzer.JsonRuleEngine.csproj
+++ b/src/Analyzer.JsonRuleEngine/Analyzer.JsonRuleEngine.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>Microsoft.Azure.Templates.Analyzer.JsonRuleEngine</AssemblyName>
-    <RootNamespace>Microsoft.Azure.Templates.Analyzer.JsonRuleEngine</RootNamespace>
+    <RootNamespace>Microsoft.Azure.Templates.Analyzer.RuleEngines.JsonEngine</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
