A few namespace fixes.

--- a/src/Analyzer.JsonRuleEngine.FunctionalTests/Analyzer.JsonRuleEngine.FunctionalTests.csproj
+++ b/src/Analyzer.JsonRuleEngine.FunctionalTests/Analyzer.JsonRuleEngine.FunctionalTests.csproj
@@ -7,7 +7,7 @@
 
     <AssemblyName>Microsoft.Azure.Templates.Analyzer.RuleEngines.JsonEngine.FunctionalTests</AssemblyName>
 
-    <RootNamespace>Microsoft.Azure.Templates.Analyzer.JsonRuleEngine.FunctionalTests</RootNamespace>
+    <RootNamespace>Microsoft.Azure.Templates.Analyzer.RuleEngines.JsonEngine.FunctionalTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
