Add Johnathon script to pull arm-ttk at build time

--- a/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
+++ b/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
@@ -16,4 +16,22 @@
     <ProjectReference Include="..\Analyzer.Types\Analyzer.Types.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <TTKUrl>https://aka.ms/arm-ttk-latest</TTKUrl>
+  </PropertyGroup>
+    <Target Name="DownloadTTK" AfterTargets="Build" Condition="!Exists('$(OutputPath)\TTK')">
+    <DownloadFile
+        SourceUrl="$(TTKUrl)"
+        DestinationFolder="$(IntermediateOutputPath)"
+        DestinationFileName="ttk.zip">
+      <Output TaskParameter="DownloadedFile" ItemName="TTKZip" />
+    </DownloadFile>
+    <Unzip SourceFiles="@(TTKZip)" DestinationFolder="$(IntermediateOutputPath)\TTK" />
+    <Exec Command="move /Y $(IntermediateOutputPath)\TTK\arm-ttk $(OutputPath)\TTK" />
+  </Target>
+    <Target Name="CleanTTK" AfterTargets="Clean">
+    <RemoveDir Directories="$(IntermediateOutputPath)\TTK;$(OutputPath)\TTK" />
+    <Delete Files="$(IntermediateOutputPath)\ttk.zip" />
+  </Target>
+
 </Project>
