Add nuspec files for .Core and .Cli packages

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
+    <!-- Also update version in nuspec files for Analyzer.Core and Analyzer.Cli. -->
     <Version>0.0.1-alpha</Version>
     <Authors>Microsoft</Authors>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
