--- a/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
+++ b/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
@@ -9,7 +9,7 @@
     <copyright>© Microsoft Corporation. All rights reserved.</copyright>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/Azure/template-analyzer</projectUrl>
-    <tags>arm azure template analyzer scanner deployment</tags>
+    <tags>arm azure template analyzer scanner deployment security</tags>
 
     <dependencies>
       <dependency id="Azure.Deployments.Core" version="1.0.112" />
