Use a .targets file to move the TTK folder to all the needed build directories

--- a/src/Analyzer.Cli/Analyzer.Cli.csproj
+++ b/src/Analyzer.Cli/Analyzer.Cli.csproj
@@ -21,4 +21,6 @@
     <ProjectReference Include="..\Analyzer.Core\Analyzer.Core.csproj" />
   </ItemGroup>
 
+  <Import Project="..\CopyTTK.targets" />
+
 </Project>
