Add CleanTTK target for projects that only have a copy of it

--- a/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
+++ b/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
@@ -17,6 +17,6 @@
     <ProjectReference Include="..\Analyzer.PowerShellRuleEngine\Analyzer.PowerShellRuleEngine.csproj" />
   </ItemGroup>
 
-  <Import Project="..\CopyTTK.targets" />
+  <Import Project="..\TTK.targets" />
 
 </Project>
