--- a/src/Analyzer.Cli/Analyzer.Cli.csproj
+++ b/src/Analyzer.Cli/Analyzer.Cli.csproj
@@ -21,6 +21,6 @@
     <ProjectReference Include="..\Analyzer.Core\Analyzer.Core.csproj" />
   </ItemGroup>
 
-  <Import Project="..\CopyTTK.targets" />
+  <Import Project="..\TTK.targets" />
 
 </Project>
