--- a/src/Analyzer.Core.UnitTests/Analyzer.Core.UnitTests.csproj
+++ b/src/Analyzer.Core.UnitTests/Analyzer.Core.UnitTests.csproj
@@ -19,6 +19,6 @@
     <ProjectReference Include="..\Analyzer.Core\Analyzer.Core.csproj" />
   </ItemGroup>
 
-  <Import Project="..\CopyTTK.targets" />
+  <Import Project="..\TTK.targets" />
 
 </Project>
