Add launch settings to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Launch settings for Visual Studio
+**/Properties/launchSettings.json
