Fix casing of private variables, fix pre test hook for Linux, and move test templates to build directory

--- a/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
+++ b/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
@@ -19,4 +19,10 @@
 
   <Import Project="..\TTK.targets" />
 
+  <ItemGroup>
+      <Content Include="templates\**">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+  </ItemGroup>
+
 </Project>
