--- a/src/Analyzer.Cli.NuGet/Analyzer.Cli.nuspec
+++ b/src/Analyzer.Cli.NuGet/Analyzer.Cli.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Azure.Templates.Analyzer.CommandLine</id>
-    <!-- Also update version of dependency below, and in Analyzer.Core nuspec and Directory.Build.props. -->
-    <version>0.0.1-alpha</version>
+    <!-- Also update version in Analyzer.Core nuspec and Directory.Build.props. -->
+    <version>0.0.2-alpha</version>
     <authors>Microsoft</authors>
     <description>A command line interface for Azure.Templates.Analyzer.Core - an ARM Template scanner for security misconfiguration and best practices</description>
     <copyright>© Microsoft Corporation. All rights reserved.</copyright>
