--- a/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
+++ b/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
   	<TargetFramework>net5.0</TargetFramework>
+	<DocumentationFile>bin\Analyzer.Utilities.xml</DocumentationFile>  
+	<TreatWarningsAsErrors>true</TreatWarningsAsErrors> 
   </PropertyGroup>
 
   <ItemGroup>
