--- a/src/Analyzer.Reports/Analyzer.Reports.csproj
+++ b/src/Analyzer.Reports/Analyzer.Reports.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Sarif.Sdk" Version="2.4.12" />
+    <PackageReference Include="System.IO.Abstractions" Version="13.2.47" />
   </ItemGroup>
 
   <ItemGroup>
