--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 env:
-  SlnFile: src/TemplateAnalyzer.sln
   Configuration: Release
 
 jobs:
@@ -33,10 +32,10 @@ jobs:
         dotnet-version: 5.0.x
         
     - name: Restore dependencies
-      run: dotnet restore ${{ env.SlnFile }}
+      run: dotnet restore
       
     - name: Build
-      run: dotnet build ${{ env.SlnFile }} --configuration ${{ env.Configuration }} --no-restore
+      run: dotnet build --configuration ${{ env.Configuration }} --no-restore
       
     - name: Test
-      run: dotnet test **/*Tests.csproj --no-build --configuration ${{ env.Configuration }} --verbosity normal
+      run: dotnet test --no-build --configuration ${{ env.Configuration }} --verbosity normal
