--- a/src/Analyzer.Types.ConfigurationTests/Analyzer.Types.ConfigurationTests.csproj
+++ b/src/Analyzer.Types.ConfigurationTests/Analyzer.Types.ConfigurationTests.csproj
@@ -21,7 +21,19 @@
     <None Update="Tests\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="TestFiles\*">
+    <None Update="TestTemplates\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestConfigurations\ExcludeSeverityThree.testconfiguration">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestConfigurations\IncludeSpecificIds.testconfiguration">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestConfigurations\SeverityOneOnly.testconfiguration">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
