--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Suggest an idea for this project.
 title: "[FEATURE REQ]"
-labels: ["enhancement", "needs-triage"]
+labels: ["enhancement", "🔍 needs-triage"]
 
 body:
   - type: markdown
