--- a/src/Analyzer.Cli.FunctionalTests/Analyzer.Cli.FunctionalTests.csproj
+++ b/src/Analyzer.Cli.FunctionalTests/Analyzer.Cli.FunctionalTests.csproj
@@ -33,4 +33,9 @@
     </None>
   </ItemGroup>
 
+  <Target Name="CopyTestFolder" AfterTargets="Build" Condition="!Exists('$(OutputPath)\ADirectoryToAnalyze')">
+    <Exec Command="cp -r ../Analyzer.Cli.FunctionalTests/ADirectoryToAnalyze $(OutputPath)/ADirectoryToAnalyze/" Condition="'$(OS)' == 'Unix'" />
+    <Exec Command="Xcopy /E /I ..\Analyzer.Cli.FunctionalTests\ADirectoryToAnalyze $(OutputPath)\ADirectoryToAnalyze\" Condition="'$(OS)' != 'Unix'" />
+  </Target>
+ 
 </Project>
