Simplify pathing and allow newer versions

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,7 @@ MigrationBackup/
 
 # Launch settings for Visual Studio
 **/Properties/launchSettings.json
+
+# Ignore PSRule modules
+src/Analyzer.PowerShellRuleEngine/PSRule/
+src/Analyzer.PowerShellRuleEngine/PSRule.Rules.Azure/
