--- a/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
+++ b/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
@@ -17,10 +17,10 @@
         <dependency id="Azure.Deployments.Expression" version="1.0.568" />
         <dependency id="Azure.Deployments.Templates" version="1.0.568" />
         <dependency id="Newtonsoft.Json" version="12.0.3" />
-        <dependency id="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
-        <dependency id="Microsoft.PowerShell.SDK" Version="7.1.5" />
-        <dependency id="Sarif.Sdk" Version="2.4.12" />
-        <dependency id="System.IO.Abstractions" Version="13.2.47" />
+        <dependency id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" />
+        <dependency id="Microsoft.PowerShell.SDK" version="7.1.5" />
+        <dependency id="Sarif.Sdk" version="2.4.12" />
+        <dependency id="System.IO.Abstractions" version="13.2.47" />
       </group>
     </dependencies>
 
