--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,7 +59,10 @@
             "options": [
                 "win-x64",
                 "linux-x64",
-                "osx-x64"
+                "osx-x64",
+                "win-arm64",
+                "linux-arm64",
+                "osx-arm64"
             ]
         }
     ]
