VS Code 'publish' task to use Release config only, not publish single file (issues with PowerShell)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,11 +40,9 @@
             "args": [
                 "publish",
                 "${workspaceFolder}/src/Analyzer.Cli/Analyzer.Cli.csproj",
-                "--runtime",
-                "${input:runtimeId}",
+                "--configuration", "Release",
+                "--runtime", "${input:runtimeId}",
                 "--self-contained",
-                "/property:PublishSingleFile=true",
-                "/property:IncludeNativeLibrariesForSelfExtract=true",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
