Fix PowerShell execution for win-x64 publishing.

--- a/src/TTK.targets
+++ b/src/TTK.targets
@@ -5,6 +5,19 @@
     <Exec Command="Xcopy /E /I ..\Analyzer.PowerShellRuleEngine\bin\$(Configuration)\$(TargetFramework)\TTK $(OutputPath)\TTK" Condition="'$(OS)' != 'Unix'" />
   </Target>
 
+  <!-- Move platform-specific runtime modules directly into the publish directory -->
+  <Target Name="UpdatePSRuntimeModules" AfterTargets="Publish">
+    <PropertyGroup>
+      <OSDirectory Condition="'$(OS)' == 'Unix'">unix</OSDirectory>
+      <OSDirectory Condition="'$(OS)' != 'Unix'">win</OSDirectory>
+    </PropertyGroup>
+    <ItemGroup>
+      <Modules Include="$(PublishDir)\runtimes\$(OSDirectory)\lib\$(TargetFramework)\Modules\**\*" />
+    </ItemGroup>
+    <Move SourceFiles="@(Modules)" DestinationFolder="$(PublishDir)\Modules\%(RecursiveDir)" />
+    <RemoveDir Directories="$(PublishDir)\runtimes" />
+  </Target>
+
   <Target Name="CleanTTK" AfterTargets="Clean">
     <RemoveDir Directories="$(OutputPath)\TTK" />
   </Target>
